# agentic-engineering-workflow-automation

./: .dockerignore  .env.example  .gitignore  Dockerfile.fea-worker  Dockerfile.mcp-server  Dockerfile.orchestrator  README.md  docker-compose.fea-worker.yml  docker-compose.mcp-server.yml  docker-compose.orchestrator.yml  docker-compose.yml  pyproject.toml  setup-all.ps1  setup-all.sh
.github/workflows/: deploy-fea-worker.yml  deploy-mcp-server.yml  deploy-orchestrator.yml
docs/: execution.txt
docs/Future Research/: Suggestions.md
docs/v2/: Todo.md  week2sprint.md
docs/v3/: Todo.md
docs/v4/: Todo.md  checkpoint-architecture.md  containerization-process.md
docs/v5/: CONTEXT_DOCUMENT.md  Todo.md
docs/v6/: Todo.md
docs/v7/: Todo.md
docs/v8/: Todo.md
services/abaqus-engine/: 1-containerization-process.md  2-setup-api-bridge.md  3-deployment.md  engine-api.py
services/fea-worker/: .env.example  Dockerfile  README.md  fea_worker.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh
services/fea-worker/lib/: config.json  export_mesh_fields.py  export_preview_png.py  simulation_runner.py  visualizer_export.py
services/fea-worker/tools/: vtu_to_glb.py
services/mcp-server/: .env.example  Dockerfile  README.md  azure_artifacts.py  conversions.py  database.py  init_db.py  mcp_server.py  models.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh
services/orchestrator/: .env.example  Dockerfile  README.md  __init__.py  config.py  graph.py  nodes.py  orchestrator.py  prompts.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh  state.py  streamlit_app.py
shared/: __init__.py  mcp_schema.py
src/: fea_worker.py  init_db.py  mcp_server.py  orchestrator.py  requirements.txt  streamlit_app.py
src/docs/: mcp-approach.md  publication-options.md
v1/: database.py  framework-hosting-options.md  mcp-approach.md  mcp_schema.py  mcp_server.py  models.py  publication-options.md
v1/docs/: framework-hosting-options.md
v2/: week2sprint.md
