[project]
name = "agentic-engineering-workflow-automation"
version = "1.0.0"
description = "Central state management for Agentic FEA workflows using Model Context Protocol"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "requests",
    "langgraph",
    "langchain-google-genai",
    "langchain-core",
    "langchain-openai",
    "streamlit>=1.50.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# Dependency groups can be added here if needed
# [dependency-groups.dev]
# dependencies = []

[tool.uv.sources]
# No custom sources needed

